<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddt2_assets</name>
  <version>0.0.0</version>
  <description>the ddt2_assets</description>
  <maintainer email="2028238109@qq.com">lsy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ddt2_hw</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>ros2_control_demo_hardware</exec_depend>
  <exec_depend>ros2_control_test_nodes</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
