<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddt2_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2028238109@qq.com">lsy</maintainer>
  <license>TODO: License declaration</license>

  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>control_toolbox</depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>hardware_interface</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>