<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddt2_hw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2028238109@qq.com">lsy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>ddt2_msgs</depend>
  <depend>realtime_tools</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <depend>yaml-cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
